# antichet_RAG

./: .env.example  AGENT.md  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/data-bulk-importer/: skill.md
.claude/skills/docker-compose-debugger/: skill.md
.claude/skills/fastapi-endpoint-scaffolder/: skill.md
.claude/skills/health-check-auditor/: skill.md
.claude/skills/pytest-test-runner/: skill.md
.claude/skills/rag-retrieval-debugger/: skill.md
.claude/skills/ruff-lint-fixer/: skill.md
.claude/skills/sqlalchemy-model-generator/: skill.md
antifraud_rag/: __init__.py  analyzer.py  main.py  schemas.py
antifraud_rag/core/: __init__.py  config.py  constants.py
antifraud_rag/db/: __init__.py  models.py  session.py
antifraud_rag/services/: __init__.py  cache.py  embedding.py  prompts.py  retrieval.py
app/: main.py
app/api/v1/: analyze.py  data.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: data.py
app/services/: embedding.py  retrieval.py
scripts/: init_db.py
tests/: conftest.py  test_anti_fraud_rag.py  test_config.py  test_embedding.py  test_embedding_cache.py  test_retrieval.py  test_schemas.py
