[project]
name = "anticheat-rag"
version = "0.1.0"
description = "Anti-cheat RAG system"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "sqlalchemy[asyncio]==2.0.28",
    "asyncpg==0.29.0",
    "pgvector==0.2.5",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.2",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
