[project]
name = "antifraud-rag"
version = "1.0.0"
description = "Anti-Fraud RAG System - 反欺诈 RAG 系统"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pgvector==0.2.5",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.2",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
]
fastapi = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "python-multipart==0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antifraud_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
]
