[project]
name = "antifraud-rag"
version = "1.0.0"
description = "Hybrid-search anti-fraud RAG Python library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pgvector==0.2.5",
    "pydantic>=2.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.2",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antifraud_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
]
